--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-}
+@import url('./assets/styles/reset.scss');
+@import url('./assets/styles/variables.scss');
+@import url('./assets/styles/global.scss');
