--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
 @import url('./assets/styles/reset.scss');
 @import url('./assets/styles/variables.scss');
 @import url('./assets/styles/global.scss');
+
+// components
+@import url('./assets/styles/button.scss');
