--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,6 @@
 <!-- templates/home.html -->
 <template id="home-template">
   <div class="template-container">
-    <button id="home-gallery-button">Gallery</button>
+    <button id="home-gallery-button" class="three">Gallery</button>
   </div>
 </template>
