--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,18 @@
-@import url('./assets/styles/reset.scss');
-@import url('./assets/styles/variables.scss');
-@import url('./assets/styles/global.scss');
+// styles.scss
+@use './assets/styles/reset';
+@use './assets/styles/fonts';
+@use './assets/styles/color_schemes';
+@use './assets/styles/variables';
+@use './assets/styles/mixins';
+@use './assets/styles/global';
+
+// elements
+@use './assets/styles/heading';
+@use './assets/styles/button';
 
 // components
-@import url('./assets/styles/button.scss');
+@use './assets/styles/navigation';
+@use './assets/styles/divider';
+
+// animations
+@use './assets/styles/animation/typewriter';
