--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -2,6 +2,6 @@
 <template id="four-oh-four-template">
   <div class="template-container">
     <h1>404</h1>
-    <button id="404-home-button">Home</button>
+    <button id="404-home-button" class="three">Home</button>
   </div>
 </template>
