--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,11 @@
 <!-- templates/home.html -->
 <template id="home-template">
-  <div class="template-container">
-    <button id="home-gallery-button" class="three">Gallery</button>
+  <div id="home" class="template-container content-template">
+    <h2 class="typewriter">Hello</h2>
+    <p class="typewriter">This is a thing I built.</p>
+    <p class="typewriter">
+      I wanted to build something that doesn't rely on frameworks.
+    </p>
+    <p class="typewriter">And make cool $%^&.</p>
   </div>
 </template>
