--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -5,6 +5,29 @@
   color: var(--color-light);
 }
 
+#loader {
+  background-color: var(--color-blue);
+  height: 2rem;
+  left: 50%;
+  margin-right: 0.75rem;
+  mask-image: url('assets/images/icon-loading.svg');
+  mask-repeat: no-repeat;
+  mask-size: contain;
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition: opacity var(--transition-delay-long)
+    var(--transition-easing-in-out);
+  width: 2rem;
+  z-index: 3;
+
+  &.active {
+    opacity: 1;
+  }
+}
+
 body {
   border: 0;
   box-sizing: border-box;
