--- a/src/assets/styles/components/navigation.scss
+++ b/src/assets/styles/components/navigation.scss
@@ -25,7 +25,7 @@
     gap: 0.125rem;
 
     & ul {
-      margin-left: 1.6rem;
+      padding-left: 1.6rem;
     }
   }
 
@@ -41,6 +41,7 @@
     color: var(--color-blue);
     display: flex;
     margin-bottom: 0.25rem;
+    padding: 0 0 0 0.25rem;
 
     & span {
       color: inherit;
